--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
   overflow: hidden;
 }
 
+h1 {
+  color: floralwhite;
+}
+
 .container {
   display: flex;
   justify-content: space-around;
